chore: llm fixes
