# backend/docs/swagger.yaml
@@ -7,6 +7,18 @@ definitions:
       name:
         type: string
     type: object
+  dto.ChatRequest:
+    properties:
+      message:
+        type: string
+      user_identifier:
+        type: string
+    type: object
+  dto.ChatResponse:
+    properties:
+      reply:
+        type: string
+    type: object
   dto.CreateChatBotRequest:
     properties:
       config:
@@ -88,6 +100,13 @@ definitions:
       message:
         type: string
     type: object
+  dto.SuccessResponse-dto_PaginatedResponse-models_ChatBot:
+    properties:
+      data:
+        $ref: '#/definitions/dto.PaginatedResponse-models_ChatBot'
+      message:
+        type: string
+    type: object
   dto.SuccessResponse-models_ChatBot:
     properties:
       data:
@@ -132,6 +151,8 @@ definitions:
         type: string
       id:
         type: integer
+      integrations:
+        type: string
       name:
         type: string
       updated_at:
@@ -331,6 +352,44 @@ paths:
       summary: Update chatbot details
       tags:
       - chatbots
+  /chatbots/{id}/chat:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ChatBot ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Chat payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ChatRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ChatResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Send a message to a chatbot
+      tags:
+      - chatbots
   /chatbots/create:
     post:
       consumes:
@@ -383,7 +442,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.PaginatedResponse-models_ChatBot'
+            $ref: '#/definitions/dto.SuccessResponse-dto_PaginatedResponse-models_ChatBot'
         "400":
           description: Bad Request
           schema:
